Signing packages scripts